--- a/DHYM/index.html
+++ b/DHYM/index.html
@@ -38,7 +38,7 @@
 		<li><a href=" https://a206.github.io/NO.1" target="_blank"><font color="yellow" size="4">第一次作业</font></a></li>
 		<li><a href=" https://a206.github.io/NO.2 GKZYB" target="_blank"><font color="yellow" size="4">第二次作业</font></a></li>
 		<li><a href=" https://a206.github.io/NO.3 JX" target="_blank"><font color="yellow" size="4">第三次作业</font></a></li>
-		
+		<li><a href=" https://a206.github.io/NO.3 JX" target="_blank"><font color="yellow" size="4">第四次作业</font></a></li>
 	       </ul>
 	
 		</div>
