--- a/Web-Work/index.html
+++ b/Web-Work/index.html
@@ -37,7 +37,7 @@
 		<li><a href=" https://a206.github.io/NO.1" target="_blank"><font color="yellow" size="4">第一次作业</font></a></li>
 		<li><a href=" https://a206.github.io/NO.2 GKZYB" target="_blank"><font color="yellow" size="4">第二次作业</font></a></li>
 		<li><a href=" https://a206.github.io/NO.3 JX" target="_blank"><font color="yellow" size="4">第三次作业</font></a></li>
-		<li><a href=" https://a206.github.io/NO.4 WDJX" target="_blank><font color="yellow" size="4">第四次作业</font></a></li>	       
+		<li><a href=" https://a206.github.io/NO.4 WDJX" target="_blank><font  size="4">第四次作业</font></a></li>	       
 			</ul>
 	
 		</div>
