--- a/Web-Work/index.html
+++ b/Web-Work/index.html
@@ -41,6 +41,7 @@
 		<li><a href=" https://a206.github.io/NO.3 JX" target="_blank"><font color="yellow" size="4">第三次作业</font></a></li>
 		<li><a href=" https://a206.github.io/NO.4 WDJX" target="_blank"><font color="yellow" size="4">第四次作业</font></a></li>      
 		<li><a href=" https://a206.github.io/NO.5 AH2" target="_blank"><font color="yellow" size="4">第五次作业</font></a></li>  	
+		<li><a href=" https://a206.github.io/NO.6 MFQQ" target="_blank"><font color="yellow" size="4">第六次作业</font></a></li>  	
 			</ul>
 	
 		</div>
