--- a/Web-Work/index.html
+++ b/Web-Work/index.html
@@ -42,7 +42,8 @@
 		<li><a href=" https://a206.github.io/NO.4 WDJX" target="_blank"><font color="yellow" size="4">第四次作业</font></a></li>      
 		<li><a href=" https://a206.github.io/NO.5 AH2" target="_blank"><font color="yellow" size="4">第五次作业</font></a></li>  	
 		<li><a href=" https://a206.github.io/NO.6 MFQQ" target="_blank"><font color="yellow" size="4">第六次作业</font></a></li>  	
-		<li><a href=" https://a206.github.io/NO.7 TMSY" target="_blank"><font color="yellow" size="4">第七次作业</font></a></li>  	
+		<li><a href=" https://a206.github.io/NO.7 TMSY" target="_blank"><font color="yellow" size="4">第七次作业</font></a></li>
+		<li><a href=" https://a206.github.io/NO.8 KBBG" target="_blank"><font color="yellow" size="4">第八次作业</font></a></li>
 			</ul>
 	
 		</div>
