--- a/Web-Work/index.html
+++ b/Web-Work/index.html
@@ -44,6 +44,8 @@
 		<li><a href=" https://a206.github.io/NO.6 MFQQ" target="_blank"><font color="yellow" size="4">第六次作业</font></a></li>  	
 		<li><a href=" https://a206.github.io/NO.7 TMSY" target="_blank"><font color="yellow" size="4">第七次作业</font></a></li>
 		<li><a href=" https://a206.github.io/NO.8 KBBG" target="_blank"><font color="yellow" size="4">第八次作业</font></a></li>
+		<li><a href=" https://a206.github.io/NO.9 CYJHS" target="_blank"><font color="yellow" size="4">第九次作业</font></a></li>
+		<li><a href=" https://a206.github.io/NO.10 CYGF" target="_blank"><font color="yellow" size="4">第十次作业</font></a></li>
 			</ul>
 	
 		</div>
