--- a/NO.10 CYGF/CY-menu.html
+++ b/NO.10 CYGF/CY-menu.html
@@ -168,9 +168,9 @@
 				<br />
 				<h2 align="center">Online Payments by</h2>
 				<hr color="#85E085"/><br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/支付宝.jpg" width="200px"/>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/微信.jpg" width="200px"/>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/下载 (1).jpg" width="200px" />
+				<img src="img/支付宝.jpg" width="200px"/>
+				<img src="img/微信.jpg" width="200px"/>
+				<img src="img/下载 (1).jpg" width="200px" />
 			</div>
 		</div>
 		
