--- a/NO.10 CYGF/CY-menu.html
+++ b/NO.10 CYGF/CY-menu.html
@@ -10,7 +10,7 @@
 	<div class="suoyou clearfix">
 		<div class="naodai">
 			<font face="default" color="#FFFFFF" size="7">Menu Style</font>
-			<a href="CY-zy.html" class="a1">home&nbsp;||</a>
+			<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||</p>
 			<a href="CY-menu.html" class="a2">menu</a>
 		</div>
 		<div class="shenti clearfix">
