--- a/NO.10 CYGF/CY-us.html
+++ b/NO.10 CYGF/CY-us.html
@@ -11,7 +11,7 @@
 		<div class="suoyou clearfix">
 		<div class="naodai">
 			<font face="default" color="#FFFFFF" size="7">About Us</font>
-			<a href="CY-zy.html" class="a1" >home&nbsp;||</a>
+			<a href="CY-zy.html" class="a1" >home</a><p>&nbsp;||</p>
 			<a href="CY-us.html" class="a2" >us</a>
 		</div>
 		<div class="hank">
