--- a/NO.10 CYGF/CY-us.html
+++ b/NO.10 CYGF/CY-us.html
@@ -10,9 +10,9 @@
 	<body>
 		<div class="suoyou clearfix">
 		<div class="naodai">
-			<font face="default" color="#FFFFFF" size="7">About Us</font>
-			<a href="CY-zy.html" class="a1" >home&nbsp;||</a>
-			<a href="CY-us.html" class="a2" >us</a>
+			<p align="center"><font face="default" color="#FFFFFF" size="7">About Us</font>
+			<a href="CY-zy.html" class="a1" >home</a><p>&nbsp;||</p>
+			<a href="CY-us.html" class="a2" >us</a></p>
 		</div>
 		<div class="hank">
 			<div class="canpan"></div>
