--- a/NO.10 CYGF/CY-Services.html
+++ b/NO.10 CYGF/CY-Services.html
@@ -9,9 +9,9 @@
 	<body>
 		<div class="suoyou clearfix">
 			<div class="naodai">
-				<font face="default" color="#FFFFFF" size="7">Our Services</font>
-				<a href="CY-zy.html" class="a1">home&nbsp;||</a>
-				<a href="CY-Services.html" class="a2">sercives</a>
+				<p align="center"><font face="default" color="#FFFFFF" size="7">Our Services</font>
+				<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||</p>
+				<a href="CY-Services.html" class="a2">sercives</a></p>
 			</div>
 			<h1 align="center">Order Online</h1>
 			<hr color="#85E085" />
@@ -149,9 +149,9 @@
 				<br />
 				<h2 align="center">Online Payments by</h2>
 				<hr color="#85E085"/><br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/支付宝.jpg" width="200px"/>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/微信.jpg" width="200px"/>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/下载 (1).jpg" width="200px" />
+				<img src="img/支付宝.jpg" width="200px"/>
+				<img src="img/微信.jpg" width="200px"/>
+				<img src="img/下载 (1).jpg" width="200px" />
 			</div>
 		</div>
 		
