--- a/NO.10 CYGF/CY-Services.html
+++ b/NO.10 CYGF/CY-Services.html
@@ -9,15 +9,15 @@
 	<body>
 		<div class="suoyou clearfix">
 			<div class="naodai">
-<<<<<<< HEAD
+
 				<p align="center"><font face="default" color="#FFFFFF" size="7">Our Services</font>
 				<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||</p>
 				<a href="CY-Services.html" class="a2">sercives</a></p>
-=======
-				<font face="default" color="#FFFFFF" size="7">Our Services</font>
+
+				/*<font face="default" color="#FFFFFF" size="7">Our Services</font>
 				<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||</p>
-				<a href="CY-Services.html" class="a2">sercives</a>
->>>>>>> ae13951de07b9d1f198db433d5bf15090b60a55d
+				<a href="CY-Services.html" class="a2">sercives</a>*/
+
 			</div>
 			<h1 align="center">Order Online</h1>
 			<hr color="#85E085" />
