--- a/NO.10 CYGF/CY-menu.html
+++ b/NO.10 CYGF/CY-menu.html
@@ -9,15 +9,15 @@
 	<body>
 	<div class="suoyou clearfix">
 		<div class="naodai">
-<<<<<<< HEAD
-			<p align="center"><font face="default" color="#FFFFFF" size="7">Menu Style</font>
-			<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||</p>
+
+			<p align="center"><font face="default" color="#FFFFFF" size="7">Menu Style</font></p>
+			<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||
 			<a href="CY-menu.html" class="a2">menu</a></p>
-=======
-			<font face="default" color="#FFFFFF" size="7">Menu Style</font>
+
+<!-- 			<font face="default" color="#FFFFFF" size="7">Menu Style</font>
 			<a href="CY-zy.html" class="a1">home</a><p>&nbsp;||</p>
-			<a href="CY-menu.html" class="a2">menu</a>
->>>>>>> ae13951de07b9d1f198db433d5bf15090b60a55d
+			<a href="CY-menu.html" class="a2">menu</a> -->
+
 		</div>
 		<div class="shenti clearfix">
 			<div class="food1">
