--- a/NO.10 CYGF/CY-us.html
+++ b/NO.10 CYGF/CY-us.html
@@ -10,15 +10,15 @@
 	<body>
 		<div class="suoyou clearfix">
 		<div class="naodai">
-<<<<<<< HEAD
+
 			<p align="center"><font face="default" color="#FFFFFF" size="7">About Us</font>
 			<a href="CY-zy.html" class="a1" >home</a><p>&nbsp;||</p>
 			<a href="CY-us.html" class="a2" >us</a></p>
-=======
-			<font face="default" color="#FFFFFF" size="7">About Us</font>
+
+<!-- 			<font face="default" color="#FFFFFF" size="7">About Us</font>
 			<a href="CY-zy.html" class="a1" >home</a><p>&nbsp;||</p>
 			<a href="CY-us.html" class="a2" >us</a>
->>>>>>> ae13951de07b9d1f198db433d5bf15090b60a55d
+ -->
 		</div>
 		<div class="hank">
 			<div class="canpan"></div>
